Document `--jvm_args` in the README